--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.nav-list {
+  @apply flex justify-center items-center w-[20%] h-[50px] text-nav-list;
+}
+
+.nav-button {
+  @apply flex gap-[2px] flex-col justify-center items-center cursor-pointer;
+}
