[Feture] 책나무 - 누적 페이지를 이용한 책 쌓기 기능 구현

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -32,6 +32,10 @@
   @apply text-content-2xl font-normal tracking-[-0.48px];
 }
 
+.contents-2xl-md {
+  @apply text-content-2xl font-medium tracking-[-0.48px];
+}
+
 .contents-xl {
   @apply text-content-xl font-normal tracking-[-0.4px];
 }
