--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -177,3 +177,11 @@
   box-shadow: 8px 12px 18px 0px rgba(0, 0, 0, 0.25);
 }
 
+
+/* -------------------------------------------- */
+/*                    SPLASH                    */
+/* -------------------------------------------- */
+
+.animate-splash {
+  animation-fill-mode: forwards;
+}
