[Feat] Splash페이지 animation-delay 추가

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -182,6 +182,10 @@
 /*                    SPLASH                    */
 /* -------------------------------------------- */
 
+.splash-delay {
+  animation-delay: .4s;
+}
+
 .animate-splash {
   animation-fill-mode: forwards;
 }
