--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -177,6 +177,10 @@
   box-shadow: 8px 12px 18px 0px rgba(0, 0, 0, 0.25);
 }
 
+.bg-gray {
+  background-color: rgba(246, 246, 246, 1);
+}
+
 /* -------------------------------------------- */
 /*                    SPLASH                    */
 /* -------------------------------------------- */
