--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -188,3 +188,16 @@
 .animate-splash {
   animation-fill-mode: forwards;
 }
+
+
+
+/* ------------------------------------------------ */
+/*                  tabNavigaiton                   */
+/* ------------------------------------------------ */
+.nav-default {
+  @apply box-border block h-full leading-[54px];
+}
+
+.nav-active {
+  @apply text-primary-500 border-b-[3px] border-primary-500;
+}
