[Modify] .contents-md 폰트 두께 normal로 수정

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -49,7 +49,7 @@
 }
 
 .contents-md {
-  @apply text-content-medium font-medium tracking-[-0.32px];
+  @apply text-content-medium font-normal tracking-[-0.32px];
 }
 
 .contents-md-bold {
