[Design] tailwind.css에 스크롤바 hidden css class 추가

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -218,3 +218,12 @@
 .default-option {
   @apply text-grayscale-400;
 }
+
+/* -------------------------------------------- */
+/*               scroll-bar hidden              */
+/* -------------------------------------------- */
+.custom-scroll-hidden {
+  overflow: auto;
+  scrollbar-width: none;
+  -webkit-overflow-style: none;
+}
