[Modify] 메모 아이콘 적용 및 스타일 수정
- tailwind.css
- MemoDetailPage.jsx
- MemoRegistrationPage.jsx

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -212,7 +212,7 @@
 /* -------------------------------------------------- */
 /* memo book title 책 아이콘 */
 .memo-icon {
-  @apply before:content-[''] before:block before:w-[18px] before:h-[18px] before:absolute before:top-[26px] before:left-4 before:bg-[url('/images/icons/memo.svg')] before:bg-cover /* after:content-[''] after:block after:w-[18px] after:h-[18px] after:absolute*/;
+  @apply before:content-[''] before:block before:w-[18px] before:h-[18px] before:absolute before:bg-[url('/images/icons/memo.svg')] before:bg-cover;
 }
 
 .default-option {
