--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -114,7 +114,8 @@
 .clip-text-1 {
   text-overflow: ellipsis;
   overflow: hidden;
-  word-break: break-word;
+  /* word-break: break-word; */
+  white-space: nowrap;
 
   display: -webkit-box;
   -webkit-line-clamp: 1;
